--- a/cart.html
+++ b/cart.html
@@ -75,6 +75,8 @@
     <div class="container justify-content-md-center">
       <div class="col">
         <div class="row">
+
+
           <h4 class="mt-5">Tipo de envío</h4>
           <div class="custom-control custom-radio">
             <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" autocomplete="off">
@@ -91,24 +93,46 @@
             <label class="custom-control-label" for="standardradio">Standard (12-15 días) - Costo del 5% sobre el
             subtotal</label>
           </div>
+          <div class="invalid-feedback" id="radioInvalid">Seleccione un tipo de envío</div>
+
+
+
         </div>
         <h4 class="mt-5">Dirección de envío</h4>
         <div class="row">
+
+
+
           <div class="form-group col-6">
             <label for="street">Calle</label>
             <input type="text" class="form-control" id="street" autocomplete="off">
+            <div class="invalid-feedback" id="streetInvalid">Ingresa una calle</div>
           </div>
+
+
           <div class="form-group col-6">
             <label for="number">Número</label>
             <input type="text" class="form-control" id="number" autocomplete="off">
+            <div class="invalid-feedback" id="numberInvalid">Ingresa un numero</div>
           </div>
         </div>
+
+
         <div class="row">
           <div class="form-group col-6">
             <label for="corner">Esquina</label>
             <input type="text" class="form-control" id="corner" autocomplete="off">
+            <div class="invalid-feedback" id="cornerInvalid">Ingresa una esquina</div>
           </div>
         </div>
+
+        <button type="button" onclick="validateForm()">comprar</button>
+
+        <div class="popup" id="successPopup">
+          ¡Haz compado con exito! 
+      </div>
+
+
       </div>
     </div>
   </main>
