--- a/cart.html
+++ b/cart.html
@@ -75,8 +75,6 @@
     <div class="container justify-content-md-center">
       <div class="col">
         <div class="row">
-
-
           <h4 class="mt-5">Tipo de envío</h4>
           <div class="custom-control custom-radio">
             <input id="premiumradio" name="publicationType" type="radio" class="custom-control-input" autocomplete="off">
@@ -94,30 +92,20 @@
             subtotal</label>
           </div>
           <div class="invalid-feedback" id="radioInvalid">Seleccione un tipo de envío</div>
-
-
-
         </div>
         <h4 class="mt-5">Dirección de envío</h4>
         <div class="row">
-
-
-
           <div class="form-group col-6">
             <label for="street">Calle</label>
             <input type="text" class="form-control" id="street" autocomplete="off">
             <div class="invalid-feedback" id="streetInvalid">Ingresa una calle</div>
           </div>
-
-
           <div class="form-group col-6">
             <label for="number">Número</label>
             <input type="text" class="form-control" id="number" autocomplete="off">
             <div class="invalid-feedback" id="numberInvalid">Ingresa un numero</div>
           </div>
         </div>
-
-
         <div class="row">
           <div class="form-group col-6">
             <label for="corner">Esquina</label>
@@ -125,15 +113,44 @@
             <div class="invalid-feedback" id="cornerInvalid">Ingresa una esquina</div> <br>
           </div>
         </div>
+        <div class="container">
+          <h4 class="mt-5">Costos</h4>
+          <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">
+                Subtotal
+                </div>
+                Costo unitario del producto por cantidad
+              </div>
+              <span id="subtotal">USD 0</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">
+                  Costo de envío
+                </div>
+                Según el tipo de envío
+              </div>
+              <span id="envio">USD 0</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">
+                  Total ($)
+                </div>
+              </div>
+              <span id="total">USD 0</span>
+            </li>
+          </ul>
+          <br> <hr>
+        </div>
         
-
         <button type="button" class="btn btn-dark btn-lg" onclick="validateForm()">comprar</button>
 
         <div class="popup" id="successPopup">
-          ¡Has compado con éxito! 
-      </div>
-
-
+          ¡Has comprado con éxito! 
+        </div>
       </div>
     </div>
   </main>
