--- a/my-profile.html
+++ b/my-profile.html
@@ -76,55 +76,54 @@
 
 <hr>
 
-<div id="campos">
-<div class="profileinfodiv">
-  <div class="profitem">
-  <label for="nombre">Primer Nombre</label>
-  <input type="text" class="form-control" id="profnombre" name="nombre">
+
+<div class="container">
+
+  <div class="row profileinfodiv">
+    <div class="profitem col-12">
+      <label for="profnombre">Primer Nombre</label>
+      <input type="text" class="form-control" id="profnombre" name="nombre">
+    </div>
+
+    <div class="profitem col-12 ">
+      <label for="profsegundonombre">Segundo Nombre</label>
+      <input type="text" id="profsegundonombre" class="form-control" name="segundonombre">
+    </div>
+
+    <div class="profitem col-12">
+      <label for="profapellido">Primer Apellido*</label>
+      <input type="text" id="profapellido" class="form-control" name="apellido">
+    </div>
+
+    <div class="profitem col-12">
+      <label for="profsegundoapellido">Segundo Apellido</label>
+      <input type="text" id="profsegundoapellido" class="form-control" name="segundoapellido">
+    </div>
+
+    <div class="profitem col-12">
+      <label for="profemail">E-mail</label>
+      <input type="text" id="profemail" class="form-control" name="email">
+    </div>
+
+    <div class="profitem col-12">
+      <label for="profnumero">Teléfono de Contacto</label>
+      <input type="text" id="profnumero" class="form-control" name="numerotelef">
+    </div>
+  </div>
+
+ 
+      <div id="upload-picture" class= "col-12">
+        <label for="profile" class="form-label">Imagen de perfil</label>
+        <input id="subir-img" type="file" name="profile" class="form-control" style="width: 400px;">
+      </div>
+  </div>
 </div>
 
 
-  <div class="profitem">
-  <label for="segundonombre">Segundo Nombre</label>
-  <input type="text" id="profsegundonombre" class="form-control" name="segundonombre">
-</div>
-
-  <div class="profitem">
-  <label for="apellido">Primer Apellido*</label>
-  <input type="text" id="profapellido" class="form-control"name="apellido">
-</div>
-
-  <div class="profitem">
-  <label for="segundoapellido">Segundo Apellido</label>
-  <input type="text" id="profsegundoapellido" class="form-control" name="segundoapellido">
-</div>
-
-  <div class="profitem">
-  <label for="email">E-mail</label>
-  <input type="text" id="profemail" class="form-control" name="email">
-</div>
-
-  <div class="profitem">
-  <label for="numerorelef">Telefono de Contacto</label>
-  <input type="text" id="profnumero" class="form-control" name="numerotelef">
-</div>
-
-  <div class="row">
-        <div id="upload-picture">
-            <label for="profile" class="form-label">Imagen de perfil</label>
-            <input id="subir-img" type="file" name="profile" class="form-control" style="width: 400px;">
-        </div>
-       
-  
-</div>
-
-</div>
-
-</div>
-<hr>
 
 <div class="container">
   <button class="btn btn-primary" id="guardar-cambios">Guardar cambios</button>
+  <hr>
 </div>
 <!--     FIN MAQUETADO -->
 
